鼠标悬停显示数值的样式

--- a/random_index_jc.html
+++ b/random_index_jc.html
@@ -21,6 +21,20 @@
       text.axis-worktime {
         fill: #000;
       }
+	  
+	  .tooltip{
+	    position: absolute;
+		width: 120px;
+		height: auto;
+		text-align: center;
+		font-family:simsun;
+		font-size: 14px;
+		color: white;
+		background-color:black;
+		border-width:2px solid black;
+		border-radius:5px;
+	  }
+	  box-shadow
     </style>
     
     <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
