--- a/random_index_jc.html
+++ b/random_index_jc.html
@@ -181,9 +181,9 @@
 		  }
           data_cut[0] =0 		  
  		  cut[0] =0
-		  for(var i=0;i<cut.length;i++){
+		  /*for(var i=0;i<cut.length;i++){
 		     console.log(Math.floor(cut[i]*matrixrow/heatmapheight))
-		  }
+		  }*/
 		 
 		  var cluster =new Array(data.length)
 		  var row =0,inx = 0
@@ -199,41 +199,50 @@
 			     } 
 			 }
 		  }
-		  for(var i =0;i < data.length;i++){
+		  /*for(var i =0;i < data.length;i++){
 		     console.log(cluster[i])
-		  }
+		  }*/
 		  
 		
 		  var estimate = function(cluster,data){
-		     
+		     var a =new Array(data.length),
+			 b =new Array(data.length),
+			 s =new Array(data.length),
+			 avg_s =0
 		     for(var row=0; row< data.length; row++){
-			    var a =new Array(data.length)
-				var b =new Array(data.length)
 			    for(var other=0;other< data.length;other++){
 				    if(row == other){
 					    continue;
 					}
-					/*if(row ==0 && other ==54){
-					    var distance =0   
-						var minus_square =math.square(math.add(data[row],math.multiply(data[other],-1)))
-					    minus_square.map(function(value,index,matrix){
-						    distance += value;
-						});	  
-					}*/
-					 var distance =0;
-						math.square(math.add(data[row],math.multiply(data[other],-1)))
-					    .map(function(value,index,matrix){
-						    distance += value;
-						})
-					if(cluster[row] == cluster[other]){
-   						a[i] += Math.sqrt(distance)
-					}else{
-					    b[i] += Math.sqrt(distance)
+					var distance =0;
+					math.square(math.add(data[row],math.multiply(data[other],-1)))
+					.map(function(value,index,matrix){
+						distance += value;
+					})
+					var inside =0,outside=0
+					if(cluster[row] == cluster[other]){//distance within cluster
+   						a[row] += Math.sqrt(distance)
+						inside++
+					}else{//distance among cluster
+					    b[row] += Math.sqrt(distance)
+						outside++
 					}
 				}
+				//console.log(a[row])
+				//console.log(b[row])
+				a[row] = a[row] /inside
+				b[row] = b[row] /outside
+				s[row] = (b[row] -a[row])/Math.max(a[row],b[row])
+				avg_s += s[row]
+				console.log(avg_s)
 			 }
+			 avg_s /= data.length 
+			 console.log(avg_s)
+			 return avg_s
 		  }
-		  estimate(cluster,data)
+		  var avg_s = estimate(cluster,data)
+		  console.log(avg_s)
+		  //block on the right
 		  var block = svg_block.selectAll(".block")
              // .data([0].concat(colorScale.quantiles()), function(d) { return d; });
              .data(cut)
@@ -254,7 +263,8 @@
 			})
             .style("fill", function(d, i){return colors[i];})
             .on("mouseover",function(d,i){
-			 tooltip.html("cluster"+i)
+			 //tooltip.html("cluster"+i)
+			 tooltip.html(avg_s)
 			 .style("left",(d3.event.pageX) +"px")
 			 .style("top",(d3.event.pageY)+"px")
 			 .style("opacity",1.0)
