--- a/random_index_jc.html
+++ b/random_index_jc.html
@@ -161,7 +161,7 @@
 			 .append("g")//在svg内加入一个g，并设置元素g显示位置
 			 .attr("transform","translate("+(margin.left+20)+","+0+")")
 			  
-          //cluster_block,get k non-duplicate random numbers
+          //get k non-duplicate random numbers
           var origin = new Array;
 		  for(var i=0;i<height;i++){
 		      origin[i] = i+1
