--- a/random_index_jc.html
+++ b/random_index_jc.html
@@ -37,8 +37,8 @@
 	  box-shadow
     </style>
     
-    <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/3.5.3/math.min.js"></script>
+    <script type="text/javascript" src="/d3.v3.min.js"></script>
+	<script src="/math.min.js"></script>
   </head>
  <body>
  <h1>This is a heatmap example using d3.js</h1>
