--- a/random_index_jc.html
+++ b/random_index_jc.html
@@ -3,40 +3,6 @@
 <html>
   <head>
     <link rel="stylesheet" href="/style.css" type="text/css" />
-	<style>
-	  rect.bordered {
-        stroke: #E6E6E6;
-        stroke-width:0px;   
-      }
-
-      text.mono {
-        font-size: 9pt;
-        font-family: Consolas, courier;
-        fill: #aaa;
-      }
-
-      text.axis-workweek {
-        fill: #000;
-      }
-
-      text.axis-worktime {
-        fill: #000;
-      }
-	  
-	  .tooltip{
-	    position: absolute;
-		width: 120px;
-		height: auto;
-		text-align: center;
-		font-family:simsun;
-		font-size: 14px;
-		color: white;
-		background-color:black;
-		border-width:2px solid black;
-		border-radius:5px;
-	  }
-	  box-shadow
-	</style>
     <script type="text/javascript" src="/d3.v3.min.js"> </script>
 	<script type="text/javascript" src="/math.min.js"> </script>
 	<script type="text/javascript" src="/index.js"> </script>
@@ -51,10 +17,8 @@
         <stop offset="100%" stop-color="#0FF" />  
     </linearGradient>  
  </defs> 
-
  <script type="text/javascript">
- 
-       var data = new Array()
+              var data = new Array()
 		var array_data =[]
 		//var a = d3.rgb(255,255,217)
 		//var b = d3.rgb(8,29,88)
@@ -151,7 +115,7 @@
 		  
 		  for(var i=cut.length-1;i>0;i--){
 		    cut[i] = cut[i-1]
-			data_cut[i] =Math.floor(cut[i] * matrixrow / heatmapheight)
+			data_cut[i] = Math.floor(cut[i] * matrixrow / heatmapheight)
 		  }
           data_cut[0] =0 		  
  		  cut[0] =0
@@ -208,12 +172,16 @@
 					}
 					
 				}
-				console.log(inside)
-				console.log(outside)
-				a[row] = a[row] /inside
-				b[row] = b[row] /outside
-				console.log(a[row])
-				console.log(b[row])
+				//console.log(inside)
+				//console.log(outside)
+				if(inside > 0){
+					a[row] = a[row] /inside
+			    }
+				if(outside > 0){
+					b[row] = b[row] /outside
+			    }
+				//console.log(a[row])
+				//console.log(b[row])
 				s[row] = (b[row] -a[row])/Math.max(a[row],b[row])
 				//console.log(Math.max(a[row],b[row]))
 				avg_s += s[row]
@@ -302,6 +270,9 @@
                 .text("large")
                 .attr("x",250)
 				.attr("y",60)
- </script> 
-  </body>
+ 
+ 
+ </script>
+ 
+ </body>
  </html>
