--- a/random_index_jc.html
+++ b/random_index_jc.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/style.css" type="text/css" />
     <script type="text/javascript" src="/d3.v3.min.js"> </script>
 	<script type="text/javascript" src="/math.min.js"> </script>
-	<script type="text/javascript" src="/index.js"> </script>
+	<!--<script type="text/javascript" src="/index.js"> </script>-->
   </head>
  <body>
  <h1>This is a heatmap example using d3.js</h1>
@@ -233,6 +233,20 @@
 					.attr("y2",cut[i+1])
 					.attr("stroke","yellow")
 					.attr("stroke-width",5)
+				   svg_block.append("line")
+					.attr("x1",block_rec.attr("width"))
+					.attr("y1",cut[i])				
+					.attr("x2",block_rec.attr("width"))
+					.attr("y2",cut[i+1])
+					.attr("stroke","yellow")
+					.attr("stroke-width",5)
+				   svg_block.append("line")
+					.attr("x1",0)
+					.attr("y1",cut[i])				
+					.attr("x2",0)
+					.attr("y2",cut[i+1])
+					.attr("stroke","yellow")
+					.attr("stroke-width",5)
 				   svg.append("line")
 					.attr("x1",0)
 					.attr("y1",cut[i+1])				
@@ -240,10 +254,38 @@
 					.attr("y2",cut[i+1])
 					.attr("stroke","yellow")
 					.attr("stroke-width",2)
+				   svg.append("line")
+					.attr("x1",0)
+					.attr("y1",cut[i])				
+					.attr("x2",0)
+					.attr("y2",cut[i+1])
+					.attr("stroke","yellow")
+					.attr("stroke-width",5)
+				   svg.append("line")
+					.attr("x1",width)
+					.attr("y1",cut[i])				
+					.attr("x2",width)
+					.attr("y2",cut[i+1])
+					.attr("stroke","yellow")
+					.attr("stroke-width",5)
 			    }else{
 				   svg_block.append("line")
 					.attr("x1",0)
 					.attr("y1",height)				
+					.attr("x2",block_rec.attr("width"))
+					.attr("y2",height)
+					.attr("stroke","yellow")
+					.attr("stroke-width",5)
+				   svg_block.append("line")
+					.attr("x1",0)
+					.attr("y1",cut[i])				
+					.attr("x2",0)
+					.attr("y2",height)
+					.attr("stroke","yellow")
+					.attr("stroke-width",5)
+				   svg_block.append("line")
+					.attr("x1",block_rec.attr("width"))
+					.attr("y1",cut[i])				
 					.attr("x2",block_rec.attr("width"))
 					.attr("y2",height)
 					.attr("stroke","yellow")
@@ -255,6 +297,20 @@
 					.attr("y2",height)
 					.attr("stroke","yellow")
 					.attr("stroke-width",2)
+				   svg.append("line")
+					.attr("x1",0)
+					.attr("y1",cut[i])				
+					.attr("x2",0)
+					.attr("y2",height)
+					.attr("stroke","yellow")
+					.attr("stroke-width",5)
+				   svg.append("line")
+					.attr("x1",width)
+					.attr("y1",cut[i])				
+					.attr("x2",width)
+					.attr("y2",height)
+					.attr("stroke","yellow")
+					.attr("stroke-width",5)
 				}
 			 /*tooltip.html(d)
 			 .style("left",(d3.event.pageX) +"px")
@@ -265,6 +321,15 @@
 			   svg_block.selectAll("line").remove()
 			   svg.selectAll("line").remove()
 			})
+			.on("contextmenu", function(data, index) {
+			   //handle right click
+                tooltip.html("ddsfds")
+			 .style("left",(d3.event.pageX) +"px")
+			 .style("top",(d3.event.pageY)+"px")
+			 .style("opacity",1.0)
+			   //stop showing browser menu
+			   d3.event.preventDefault()
+			});
          /* block.append("text")
             .attr("class", "mono")
             .text(function(d,i) { return "label:" + i; })
