--- a/random_index_jc.html
+++ b/random_index_jc.html
@@ -108,7 +108,7 @@
 			  
           //get k non-duplicate random numbers
           var origin = new Array;
-		  for(var i=0;i<matrixrow;i++){
+		  for(var i=0;i<height;i++){
 		      origin[i] = i+1
 		  }
 		  origin.sort(function(){
@@ -120,7 +120,7 @@
 		    return a-b
 		  })
 	      
-		  for(var i=cut.length-1;i>0;i--){
+		  for(var i=buckets-1;i>0;i--){
 		    cut[i] = cut[i-1]
 			data_cut[i] = Math.floor(cut[i] * matrixrow / heatmapheight)//change from pixel_height scale to data_size scale
 		  }
